hw2 add alt attributes

--- a/index.html
+++ b/index.html
@@ -264,9 +264,18 @@
             sollicitudin odio.
           </p>
           <figure>
-            <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg" />
-            <img src="./img/photo-1574281852611-b2f04c86a520.jpg" />
-            <img src="./img/photo-1575023615386-1554d895d09d.jpg" />
+            <img
+              src="./img/photo-1572958731731-2b7fdb0a9818.jpg"
+              alt="yellow trees"
+            />
+            <img
+              src="./img/photo-1574281852611-b2f04c86a520.jpg"
+              alt="hands with rings"
+            />
+            <img
+              src="./img/photo-1575023615386-1554d895d09d.jpg"
+              alt="random image"
+            />
             <figcaption>Figure 1: Some beautiful placeholders</figcaption>
           </figure>
           <div class="is-6 title">Sixth level</div>
@@ -401,6 +410,7 @@
                         src="./img/tab-1.jpg"
                         class="modal-button"
                         data-target="modal-image1"
+                        alt="gamepad"
                       />
                     </div>
                   </div>
@@ -426,7 +436,7 @@
                 <div class="card">
                   <div class="card-image">
                     <div class="image is-4by3">
-                      <img src="./img/tab-2.jpg" />
+                      <img src="./img/tab-2.jpg" alt="ocean breath" />
                     </div>
                   </div>
                   <div class="card-content">
@@ -456,6 +466,7 @@
                         src="./img/tab-3.jpg"
                         class="modal-button"
                         data-target="modal-image2"
+                        alt="romantic couple"
                       />
                     </div>
                   </div>
@@ -585,7 +596,10 @@
             <div class="tile is-parent">
               <div class="tile is-child box">
                 <div class="image">
-                  <img src="./img/web-access-summit-eventbrite.jpg" />
+                  <img
+                    src="./img/web-access-summit-eventbrite.jpg"
+                    alt="web access summit"
+                  />
                 </div>
                 <p class="title">New York</p>
                 <p class="subtitle">Fri 27 Nov 2016</p>
@@ -595,7 +609,7 @@
             <div class="tile is-parent">
               <div class="tile is-child box">
                 <div class="image">
-                  <img src="./img/access.jpg" />
+                  <img src="./img/access.jpg" alt="person in a wheelchair" />
                 </div>
                 <p class="title">Los Angeles</p>
                 <p class="subtitle">Fri 27 Nov 2016</p>
@@ -605,7 +619,7 @@
             <div class="tile is-parent">
               <div class="tile is-child box">
                 <div class="image">
-                  <img src="./img/dotcss-2019.jpg" />
+                  <img src="./img/dotcss-2019.jpg" alt="conference hall" />
                 </div>
                 <p class="title">Mexico</p>
                 <p class="subtitle">Fri 27 Nov 2016</p>
@@ -618,7 +632,7 @@
             <div class="tile is-parent">
               <div class="tile is-child box">
                 <div class="image">
-                  <img src="./img/images.jpg" />
+                  <img src="./img/images.jpg" alt="access something" />
                 </div>
                 <p class="title">Paris</p>
                 <p class="subtitle">Fri 27 Nov 2016</p>
@@ -630,6 +644,7 @@
                 <div class="image">
                   <img
                     src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png"
+                    alt="css minsk logo"
                   />
                 </div>
                 <p class="title">Minsk</p>
@@ -725,7 +740,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-1.jpeg" />
+                      <img src="./img/ev-1.jpeg" alt="js conf logo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -750,7 +765,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-2.jpeg" />
+                      <img src="./img/ev-2.jpeg" alt="event photo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -775,7 +790,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-3.jpeg" />
+                      <img src="./img/ev-3.jpeg" alt="event photo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -802,7 +817,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-4.jpeg" />
+                      <img src="./img/ev-4.jpeg" alt="event photo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -827,7 +842,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-5.jpeg" />
+                      <img src="./img/ev-5.jpeg" alt="event photo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -852,7 +867,7 @@
                   </div>
                   <div class="card-content">
                     <div class="image">
-                      <img src="./img/ev-6.jpeg" />
+                      <img src="./img/ev-6.jpeg" alt="event photo" />
                     </div>
                   </div>
                   <div class="card-footer">
@@ -909,6 +924,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=300"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -935,6 +951,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=301"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -964,6 +981,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=302"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -990,6 +1008,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=303"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -1019,6 +1038,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=304"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -1045,6 +1065,7 @@
                       <p class="image is-32x32">
                         <img
                           src="https://source.unsplash.com/random/64x64/?sig=305"
+                          alt="random image"
                         />
                       </p>
                     </div>
@@ -1343,7 +1364,10 @@
         <div class="card">
           <div class="card-image">
             <div class="image is-4by3">
-              <img src="https://source.unsplash.com/random/?sig=2" />
+              <img
+                src="https://source.unsplash.com/random/?sig=2"
+                alt="random image"
+              />
             </div>
           </div>
           <div class="card-content">
@@ -1352,6 +1376,7 @@
                 <div class="image is-48x48">
                   <img
                     src="http://www.radfaces.com/images/avatars/linda-barret.jpg"
+                    alt="linda barret photo"
                   />
                 </div>
               </div>
@@ -1390,7 +1415,7 @@
     <div id="modal-image1" class="modal modal-fx-3dSlit">
       <div class="modal-background"></div>
       <div class="modal-content is-huge is-image">
-        <img src="https://source.unsplash.com/random/?sig=1" />
+        <img src="https://source.unsplash.com/random/?sig=1" alt="random image"/>
       </div>
       <button class="modal-close is-large"></button>
     </div>
@@ -1398,7 +1423,7 @@
     <div id="modal-image2" class="modal modal-fx-superScaled">
       <div class="modal-background"></div>
       <div class="modal-content is-image">
-        <img src="https://source.unsplash.com/random/?sig=3" />
+        <img src="https://source.unsplash.com/random/?sig=3" alt="random image"/>
       </div>
       <button class="modal-close is-large"></button>
     </div>
