hw2 use buttons

--- a/index.html
+++ b/index.html
@@ -423,10 +423,10 @@
                         volutpat ac tincidunt vitae semper quis. Accumsan tortor
                         posuere ac ut consequat semper viverra nam.
                       </p>
-                      <span
+                      <button
                         class="button is-link modal-button"
                         data-target="modal-image1"
-                        >Image modal</span
+                        >Image modal</button
                       >
                     </div>
                   </div>
@@ -449,10 +449,10 @@
                         neque egestas cmonsu songue. Phasellus vestibulum lorem
                         sed risus.
                       </p>
-                      <span
+                      <button
                         class="button is-link modal-button"
                         data-target="modal-card"
-                        >Modal Card</span
+                        >Modal Card</button
                       >
                     </div>
                   </div>
@@ -479,10 +479,10 @@
                         enim. Libero id faucibus nisl tincidunt eget nullam.
                         Commodo viverra maecenas accumsan lacus vel facilisis.
                       </p>
-                      <span
+                      <button
                         class="button is-link modal-button"
                         data-target="modal-image2"
-                        >Image modal</span
+                        >Image modal</button
                       >
                     </div>
                   </div>
