[TASK-1] Fix: Screen readers should read all meaningful images.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="container">
           <div class="navbar-brand">
             <a class="navbar-item logo-link">
-              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg">
+              <img src="https://www.epam.com/content/dam/epam/global/logo_white-blue.svg" alt="epam logo">
             </a>
             <span class="navbar-burger burger" data-target="navbarMenu">
               <span></span>
@@ -182,9 +182,9 @@
         <h5 class="is-5 title">Fifth level</h5>
         <p>Aliquam sagittis rhoncus vulputate. Cras non luctus sem, sed tincidunt ligula. Vestibulum at nunc elit. Praesent aliquet ligula mi, in luctus elit volutpat porta. Phasellus molestie diam vel nisi sodales, a eleifend augue laoreet. Sed nec eleifend justo. Nam et sollicitudin odio.</p>
         <figure>
-          <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg">
-          <img src="./img/photo-1574281852611-b2f04c86a520.jpg">
-          <img src="./img/photo-1575023615386-1554d895d09d.jpg">
+          <img src="./img/photo-1572958731731-2b7fdb0a9818.jpg" alt="Beautiful placeholder 1">
+          <img src="./img/photo-1574281852611-b2f04c86a520.jpg" alt="Beautiful placeholder 2">
+          <img src="./img/photo-1575023615386-1554d895d09d.jpg" alt="Beautiful placeholder 3">
           <figcaption>
             Figure 1: Some beautiful placeholders
           </figcaption>
@@ -290,7 +290,7 @@
               <div class="card">
                 <div class="card-image">
                   <div class="image is-4by3">
-                    <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1">
+                    <img src="./img/tab-1.jpg" class="modal-button" data-target="modal-image1" alt="modal image 1">
                   </div>
                 </div>
                 <div class="card-content">
@@ -306,7 +306,7 @@
               <div class="card">
                 <div class="card-image">
                   <div class="image is-4by3">
-                    <img src="./img/tab-2.jpg">
+                    <img src="./img/tab-2.jpg" alt="modal image 2">
                   </div>
                 </div>
                 <div class="card-content">
@@ -323,7 +323,7 @@
               <div class="card">
                 <div class="card-image">
                   <div class="image is-4by3">
-                    <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2">
+                    <img src="./img/tab-3.jpg" class="modal-button" data-target="modal-image2" alt="modal image 3">
                   </div>
                 </div>
                 <div class="card-content">
@@ -423,7 +423,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/web-access-summit-eventbrite.jpg">
+                <img src="./img/web-access-summit-eventbrite.jpg" alt="New York event logo">
               </div>
               <p class="title">New York</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -433,7 +433,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/access.jpg">
+                <img src="./img/access.jpg" alt="Los Angeles event logo">
               </div>
               <p class="title">Los Angeles</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -443,7 +443,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/dotcss-2019.jpg">
+                <img src="./img/dotcss-2019.jpg" alt="Mexico event logo">
               </div>
               <p class="title">Mexico</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -456,7 +456,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/images.jpg">
+                <img src="./img/images.jpg" alt="Paris event logo">
               </div>
               <p class="title">Paris</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -466,7 +466,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png">
+                <img src="./img/mid_300_33455472_313632022502906_5761920685983137792_n.png" alt="Minsk event logo">
               </div>
               <p class="title">Minsk</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -476,7 +476,7 @@
           <div class="tile is-parent">
             <div class="tile is-child box">
               <div class="image">
-                <img src="./img/access.jpg">
+                <img src="./img/access.jpg" alt="London event logo">
               </div>
               <p class="title">London</p>
               <p class="subtitle">Fri 27 Nov 2016</p>
@@ -559,7 +559,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-1.jpeg">
+                    <img src="./img/ev-1.jpeg" alt="Admin photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -584,7 +584,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-2.jpeg">
+                    <img src="./img/ev-2.jpeg" alt="Cards photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -609,7 +609,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-3.jpeg">
+                    <img src="./img/ev-3.jpeg" alt="Forum photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -636,7 +636,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-4.jpeg">
+                    <img src="./img/ev-4.jpeg" alt="InstaAlbum photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -661,7 +661,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-5.jpeg">
+                    <img src="./img/ev-5.jpeg" alt="Landing photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -686,7 +686,7 @@
                 </div>
                 <div class="card-content">
                   <div class="image">
-                    <img src="./img/ev-6.jpeg">
+                    <img src="./img/ev-6.jpeg" alt="Marketing photo album logo">
                   </div>
                 </div>
                 <div class="card-footer">
@@ -729,7 +729,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=300">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=300" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -751,7 +751,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=301">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=301" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -773,7 +773,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=302">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=302" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -795,7 +795,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=303">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=303" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -817,7 +817,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=304">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=304" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -839,7 +839,7 @@
                 <div class="media">
                   <div class="media-left">
                     <p class="image is-32x32">
-                      <img src="https://source.unsplash.com/random/64x64/?sig=305">
+                      <img src="https://source.unsplash.com/random/64x64/?sig=305" alt="forum post avatar">
                     </p>
                   </div>
                   <div class="media-content">
@@ -1124,14 +1124,14 @@
       <div class="card">
         <div class="card-image">
           <div class="image is-4by3">
-            <img src="https://source.unsplash.com/random/?sig=2">
+            <img src="https://source.unsplash.com/random/?sig=2" alt="">
           </div>
         </div>
         <div class="card-content">
           <div class="media">
             <div class="media-left">
               <div class="image is-48x48">
-                <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg">
+                <img src="http://www.radfaces.com/images/avatars/linda-barret.jpg" alt="jane_doe user avatar">
               </div>
             </div>
             <div class="media-content">
@@ -1159,7 +1159,7 @@
   <div id="modal-image1" class="modal modal-fx-3dSlit">
     <div class="modal-background"></div>
     <div class="modal-content is-huge is-image">
-      <img src="https://source.unsplash.com/random/?sig=1">
+      <img src="https://source.unsplash.com/random/?sig=1" alt="">
     </div>
     <button class="modal-close is-large"></button>
   </div>
@@ -1167,7 +1167,7 @@
   <div id="modal-image2" class="modal modal-fx-superScaled">
     <div class="modal-background"></div>
     <div class="modal-content  is-image">
-      <img src="https://source.unsplash.com/random/?sig=3">
+      <img src="https://source.unsplash.com/random/?sig=3" alt="">
     </div>
     <button class="modal-close is-large"></button>
   </div>
