[TASK-2] Feature: Add icons for links to third-party resources.

--- a/index.html
+++ b/index.html
@@ -1149,7 +1149,7 @@
           <a href="#" aria-current="page" class="link"><i class="fab fa-facebook fa-2x"></i></a>
           <a href="#" aria-current="page" class="link"><i class="fab fa-twitter fa-2x"></i></a>
         </div>
-        <p>The source code is licensed <a href="http://opensource.org/licenses/mit-license.php" target="_blank" class="link">MIT</a>.</p>
+        <p>The source code is licensed <a href="http://opensource.org/licenses/mit-license.php" target="_blank" class="link">MIT</a><sup><i class="fas fa-external-link-alt"></i></sup>.</p>
       </div>
     </div>
   </div>
